# SDL_loops

./: README.md
.github/workflows/: build.yml
SDL-basic-loop/: CMakeLists.txt  README.md  main.cpp
SDL_engine/: CMakeLists.txt  engine.cxx  engine.hxx  main.cpp
SDL_engine_hot_reload/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
SDL_so_engine/: CMakeLists.txt  engine.cxx  engine.hxx  main.cpp
